# plain-text-data-converter

./: CMakeLists.txt  main.cpp
DataTypes/: CMakeLists.txt
DataTypes/include/: data_types.h
DataTypes/src/: bool.cpp  data_types.cpp  list.cpp  null.cpp  number.cpp  object.cpp  string.cpp
